--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@ body {
                         Full 2BHK interior design: living room, two bedrooms, and modular kitchen with realistic renders and technical plans.
                     </p>
                     <p style="margin-top:1rem;">
-                        <a href="projects/projects.html" class="btn btn-primary">View Project 01</a>
+                        <a href="projects.html" class="btn btn-primary">View Project 01</a>
                     </p>
                 </div>
 
@@ -505,7 +505,7 @@ body {
                         Contemporary front elevation design with morning & evening lighting renders showing before/after transformation.
                     </p>
                     <p style="margin-top:1rem;">
-                        <a href="projects/project2.html" class="btn btn-primary">View Project 02</a>
+                        <a href="project2.html" class="btn btn-primary">View Project 02</a>
                     </p>
                 </div>
             </div>
@@ -938,3 +938,4 @@ document.addEventListener('DOMContentLoaded', () => {
     </script>
 </body>
 </html>
+
