--- a/projects.html
+++ b/projects.html
@@ -96,27 +96,27 @@
             <div class="slider-wrapper">
                 <!-- Slides -->
                 <div class="slide fade">
-                    <img src="project1images/Living Room.jpg" alt="Modern living room design">
+                    <img src="Living Room.jpg" alt="Modern living room design">
                     <div class="description">Modern living room design with elegant ceiling and wooden textures.</div>
                 </div>
 
                 <div class="slide fade">
-                    <img src="project1images/Bed room 1.png" alt="Cozy bedroom design">
+                    <img src="Bed room 1.png" alt="Cozy bedroom design">
                     <div class="description">Cozy bedroom with a large wall clock and warm ambient lighting.</div>
                 </div>
 
                 <div class="slide fade">
-                    <img src="project1images/bedroom 2,1.jpg" alt="Stylish bedroom design">
+                    <img src="bedroom 2,1.jpg" alt="Stylish bedroom design">
                     <div class="description">Stylish bedroom with accent lighting and contemporary wooden finishes.</div>
                 </div>
 
                 <div class="slide fade">
-                    <img src="project1images/kitchen 2.jpg" alt="Modern kitchen design">
+                    <img src="kitchen 2.jpg" alt="Modern kitchen design">
                     <div class="description">Bright L-shaped kitchen design with modern storage and lighting.</div>
                 </div>
 
                 <div class="slide fade">
-                    <img src="project1images/bedroom 1,1.png" alt="Elegant bedroom design">
+                    <img src="bedroom 1,1.png" alt="Elegant bedroom design">
                     <div class="description">Elegant bedroom design showcasing modern furniture and lighting solutions.</div>
                 </div>
 
@@ -162,4 +162,5 @@
     <script src="https://unpkg.com/lucide@latest"></script>
     <script src="../script.js"></script>
 </body>
+
 </html>
