--- a/project2.html
+++ b/project2.html
@@ -217,27 +217,27 @@
     <h1>Modern Elevation Project</h1>
     <div class="slider-container">
       <div class="slide fade">
-        <img src="project1images/project2images/1.png" alt="Conceptual Sketch">
+        <img src="project2images/1.png" alt="Conceptual Sketch">
         <div class="text">Initial Concept – Visualizing the Structure</div>
       </div>
 
       <div class="slide fade">
-        <img src="project1images/project2images/2.jpeg" alt="Daytime Render">
+        <img src="project2images/2.jpeg" alt="Daytime Render">
         <div class="text">Refining the Design – Material and Environment</div>
       </div>
 
       <div class="slide fade">
-        <img src="project1images/project2images/3.jpeg" alt="Alternate Angle">
+        <img src="project2images/3.jpeg" alt="Alternate Angle">
         <div class="text">Integrating Real-World Context and Liveliness</div>
       </div>
 
       <div class="slide fade">
-        <img src="project1images/project2images/Elevation 2.png" alt="Evening Render">
+        <img src="project2images/Elevation 2.png" alt="Evening Render">
         <div class="text">Final Model – Modern Urban Aesthetics</div>
       </div>
 
       <div class="slide fade">
-        <img src="project1images/project2images/Elevation 3.png" alt="Night Visualization">
+        <img src="project2images/Elevation 3.png" alt="Night Visualization">
         <div class="text">Final Visualization – Elegant Night Ambiance</div>
       </div>
 
@@ -283,3 +283,4 @@
   </script>
 </body>
 </html>
+
